tests/functional/lang/parse-fail-regression-20060610.err.exp
error: undefined variable 'gcc'
       at /pwd/parse-fail-regression-20060610.nix:9:11:
            8| ({
            9|   inherit gcc;
             |           ^
           10| }).gcc
